# kaist-auto-login

./: .gitignore  Dockerfile  LICENSE  README.md  chromedriver.Dockerfile  docker-compose-template.yaml  setup-docker.py
.github/workflows/: chrome-docker.yaml  docker.yaml  server.yaml
server/: Cargo.toml
server/sql/: init.sql
server/src/: conf.rs  config.rs  database.rs  email.rs  login.rs  main.rs  ws.rs
server/src/ws/: generate_email.rs  get_code.rs  v1.rs
