[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
envy = "0.4"
futures-util = "0.3"
imap = "3.0.0-alpha.4"
log = "0.4"
once_cell = "1.9.0"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.28.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
