[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
config = "0.12"
chrono = "0.4"
deadpool-postgres = { version = "0.10", features = ["serde"] }
futures-util = "0.3"
imap = "3.0.0-alpha.6"
imap-proto = "0.15"
log = "0.4"
once_cell = "1.9"
pretty_env_logger = "0.4"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.28"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
